Bug 401046 - REGRESSION: can't log out anymore
Summary: REGRESSION: can't log out anymore
Status: RESOLVED FIXED
Alias: None
Product: ksmserver
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: VHI grave
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-14 20:29 UTC by Nate Graham
Modified: 2018-11-15 11:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2018-11-14 20:29:32 UTC
Following the recent ksmserver changes on master, I can no longer log out in Neon dev unstable, with everything from git master.

Kickoff > Power > Log Out shows the logout screen, but all items are disabled, and after the 30-second countdown, no log out occurs.

Other power-related operations (restart, shut down, etc) still work.

I'm not sure what logging/debug information to provide, but if you tell me what, I can provide it. :)
Comment 1 David Edmundson 2018-11-15 08:45:01 UTC
Are you sure they're disabled? I might have a bug where logout isn't pre-selected, but that's all I know
Comment 2 David Edmundson 2018-11-15 11:34:21 UTC
Git commit 02541b8af06e1adbad3eb8563dbcdd8cf17b3cd6 by David Edmundson.
Committed on 15/11/2018 at 11:34.
Pushed by davidedmundson into branch 'master'.

[logout-greeter] Use correct enum for logout hint to QML

Summary:
Libkworkspace has two duplicate enum values for the same thing, with one
marked as "//FIXME remove". My patchset is trying to kill that enum, but
we still use it for backwards compatibility in the L&F QML in the greeter.

In my split, I used the wrong one.

Reviewers: mart

Reviewed By: mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D16891

M  +1    -1    logout-greeter/greeter.cpp

https://commits.kde.org/plasma-workspace/02541b8af06e1adbad3eb8563dbcdd8cf17b3cd6